--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h2>
   Currently Reading</h2>
   <h3>
-   Index</h3>
+   Indexx</h3>
 
   <p><a href=One_Hundred Years of Solitude></a></p>
   <p><a href=Atomic Habits>  </a></p>
